--- a/app/views/login.html
+++ b/app/views/login.html
@@ -4,21 +4,27 @@
     </div>
     <div>&nbsp;</div>
     <div>
-        <form ng-submit="showLoading(); processLogin()">
-            <div class="form-group">
+        <form ng-submit="showLoading(); processLogin()" name="loginForm" novalidate>
+            <div class="form-group" ng-class="{'has-error has-feedback':loginForm.username.$invalid}">
                 <label class="sr-only" for="username">Username</label>
-                <input type="text" class="form-control input-sm" id="username" placeholder="Username" ng-model="loginData.username">
+                <input type="text" class="form-control input-sm" id="username" name="username" placeholder="Username" ng-model="loginData.username" required>
+                <span style="color:red" ng-show="!loginForm.username.$pristine && loginForm.username.$invalid">
+                    <span ng-show="loginForm.username.$error.required">Username is required.</span>
+                </span>
             </div>
-            <div class="form-group">
+            <div class="form-group" ng-class="{'has-error has-feedback':loginForm.password.$invalid}">
                 <label class="sr-only" for="password">Password</label>
-                <input type="password" class="form-control input-sm" id="password" placeholder="Password" ng-model="loginData.password">
+                <input type="password" class="form-control input-sm" id="password" name="password" placeholder="Password" ng-model="loginData.password" required>
+                <span style="color:red" ng-show="!loginForm.password.$pristine && loginForm.password.$invalid">
+                    <span ng-show="loginForm.password.$error.required">Username is required.</span>
+                </span>
             </div>
             <div class="checkbox">
                 <label>
                     <input type="checkbox" ng-model="rememberMe"> Remember me
                 </label>
             </div>
-            <button type="submit" class="btn btn-info btn-sm">Sign in</button>
+            <button type="submit" class="btn btn-info btn-sm" ng-disabled="loginForm.$invalid">Sign in</button>
             <button type="button" class="btn btn-default btn-sm" ng-click=closeThisDialog("Cancel")>Cancel</button>
         </form>
     </div>
